--- a/amqp-demo/src/main/resources/application.properties
+++ b/amqp-demo/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 #spring.activemq.broker-url=tcp://localhost:9876
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=ctsGrp
+
