--- a/amqp-demo/src/main/resources/application.properties
+++ b/amqp-demo/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.rabbitmq.port=5672
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=ctsGrp
 
-aws.access=AKIAX4P5EZ6VY5G7CNBU
-aws.secret=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
+aws.access=accessId
+aws.secret=secretId
 
