--- a/netflix-feign/spring-feign-producer/src/main/resources/application.properties
+++ b/netflix-feign/spring-feign-producer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8088
-spring.application.name=eureka-producer
+server.port=8081
+spring.application.name=spring-feign-producer
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=true
